# LLM-HypatiaX-REPRO

./: .gitignore  =0.1.0  MANIFEST.md  Makefile  README.md  activate_hypatiax.sh  compute_solve_rate.py  pyproject.toml  requirements.txt  requirements.txt~  run_all.sh  run_all_checkpoint.py  run_solve_rate_all.sh  setup.py  setup_environment.sh  tree_r.txt
.github/: dependabot.yml
.github/scripts/: check_sweep_coverage.py  check_symbolic_equivalence.py  clean_figures_dir.py  locate_analysis_input.sh  merge_extrap_into_benchmark.py  merge_shards.py  print_repro.py  purge_figures_dest.py  result_subdir_map.py  run_analysis.py  validate_analysis_input.py
.github/workflows/: ci_analysis.yml  ci_paper_audit.yml  ci_paper_notebooks.yml  ci_pipeline.yml  ci_pipeline_analysis.yml  ci_pipeline_check.yml  ci_pipeline_public.yml  ci_pipeline_repro.yml  ci_postprocess.yml  ci_purge_runs.yml  ci_report.yml  ci_runner.yml  ci_runner_disclosure.yml  ci_runner_repro.yml  ci_trace_pipeline.yml  clean-old-workflows.yml  cleanup-cache-actions.yml  cleanup-prs.yml  static.yml
config/: repro.yaml  test_key_status.py
docs/: architecture.md
hypatiax/: path.py  tree_rd.txt
hypatiax/analysis/: analyze_hybrid_performance.py  statistical_analysis.py
notebooks/: NB-01_Citation_Bibliography_Audit.ipynb  NB-02_CrossReference_Label_Audit.ipynb  NB-03_Section_Structure_Numbering.ipynb  NB-04_Numerical_Consistency_Checker.ipynb  NB-05_Figure_Image_Dependency_Checker.ipynb  NB-06_Code_Quality_Pipeline_Integrity.ipynb
scripts/: generate_figures.py  generate_tables.py
tests/: test_smoke.py
(+626 files in other folders)
